tests/baselines/reference/moduleAssignmentCompat2.errors.txt
tests/cases/compiler/moduleAssignmentCompat2.ts(9,8): error TS2304: Cannot find name 'A'.
tests/cases/compiler/moduleAssignmentCompat2.ts(10,8): error TS2304: Cannot find name 'B'.


==== tests/cases/compiler/moduleAssignmentCompat2.ts (2 errors) ====
    module A {
        export class C { }
    }
    module B {
        export class C { }
        export class D { }
    }
    
    var a: A;
           ~
!!! error TS2304: Cannot find name 'A'.
    var b: B;
           ~
!!! error TS2304: Cannot find name 'B'.
    
    a = b;
    b = a; // error